[package]
name = "rust-gmp"
version = "0.5.1"
authors = [ "thestinger <danielmicay@gmail.com>", "Bartłomiej Kamiński <fizyk20@gmail.com>" ]
description = "Rust bindings for GMP"
repository = "https://github.com/ZenGo-X/rust-gmp"
documentation = "https://docs.rs/rust-gmp-kzen"
license = "MIT"
keywords = [ "gmp", "multi", "precision", "arithmetic", "bignum" ]

[lib]
name = "gmp"

[features]
default = ["mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]

# Feature for enabling de/serialization of Mpz
serde_support = ["serde"]

[dependencies]
libc = "~0.2"
num-traits = "0.2"

serde = { version = "1.0", optional = true, features = ["derive"] }
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }